--- a/estilos1.css
+++ b/estilos1.css
@@ -1,26 +1,71 @@
 body{
-    margin: 0px; font-family: monospace; background-color: whitesmoke;
+    margin: 0px; 
+    font-family: monospace; 
+    background-color: black;
 }
 
-.header{
-    background-color: black; width: 100%; border-bottom: 3px blue solid;
+.header{ 
+    width: 100%;
+    height: 100px; 
+    border-bottom: 3px #32b9cd solid;
+    align-items:  center;
 }
 
-h1{
-margin-top: 0px;
- color: blue;
+.titulo{
+  margin: 0px;
+  color: #32b9cd;
 }
+
+.container{
+width:80% ;
+margin: auto;
+display: flex;
+  }
 
 .header .container{
-  width: 70%;  
-  display: flex; 
+  height: 100%;
+    justify-content: space-between;
+    align-items: center; 
 }
-
+  
 .navbar{
-width: 750px; list-style: none;
- align-items: center; 
- justify-content: space-between;  
+width: 500px; 
+list-style: none;
+align-items: center; 
+justify-content: space-between;  
 display: flex;
-color: orangered;
+color: orange;
+padding: 0;
 }
 
+p {
+  color:white;
+}
+
+.banner {
+height: 500px;
+background-image: url("../imgs/Aula_HTML_CSS/imgs/bg-jelly-fish-para-home.png");
+background-size: cover;
+}
+
+.banner .card {
+background-color: beige;
+height: 450px;;
+width: 400px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+
+.btn {
+font-weight: 600;
+font-family: monospace;
+margin-top: 10px;
+border: 0;
+background-color: #e75459;
+color: white;
+font-size: 18px;
+border-radius: 4px;
+padding: 10px 15px;
+}
